force-app/main/default/objects/TPM_UI_Definition__c/TPM_UI_Definition__c.object-meta.xml
<CustomObject>
    <description>Contains the UI JSON information for Templates used in the Smart UI</description>
    <label>UI Definition</label>
    <nameField>
        <displayFormat>UID-{000000}</displayFormat>
        <label>UI Deifinition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UI Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>