force-app/main/default/objects/TPM_UI_Definition__c/fields/TPM_Description__c.field-meta.xml
<CustomField>
    <fullName>TPM_Description__c</fullName>
    <formula>CASE($User.cgcloud__Language_Postfix__c,
&quot;Language1&quot;, TPM_Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(TPM_Description_Language_2__c,TPM_Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(TPM_Description_Language_3__c,TPM_Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(TPM_Description_Language_4__c,TPM_Description_Language_1__c),
TPM_Description_Language_1__c)</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>