force-app/main/default/objects/TPM_UI_Definition__c/fields/TPM_Description_Language_1__c.field-meta.xml
<CustomField>
    <fullName>TPM_Description_Language_1__c</fullName>
    <description>Holds the description of language 1.</description>
    <label>Description Language 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>