force-app/main/default/objects/TPM_UI_Definition__c/fields/TPM_Description_Language_2__c.field-meta.xml
<CustomField>
    <fullName>TPM_Description_Language_2__c</fullName>
    <description>Holds the description of language 2.</description>
    <label>Description Language 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>