force-app/main/default/objects/TPM_UI_Definition__c/fields/TPM_Description_Language_3__c.field-meta.xml
<CustomField>
    <fullName>TPM_Description_Language_3__c</fullName>
    <description>Holds the description of language 3.</description>
    <label>Description Language 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>