force-app/main/default/objects/TPM_UI_Definition__c/fields/TPM_JSON_Definition__c.field-meta.xml
<CustomField>
    <fullName>TPM_JSON_Definition__c</fullName>
    <description>UI Definition JSON in string format.</description>
    <label>JSON Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>