force-app/main/default/objects/TPM_UI_Definition__c/fields/TPM_Usage__c.field-meta.xml
<CustomField>
    <fullName>TPM_Usage__c</fullName>
    <description>Description of the usage of this UI Definition.</description>
    <label>Usage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Tactic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>